unified_tests/control_flow/return_without_expression/expect/build.text.stderr
lib.copp:2:5: error: return statement requires a value of type int64
      return
      ^
